--- a/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
+++ b/course_1/gdm_lab_1_2_experiment_with_n_gram_models.ipynb
@@ -125,10 +125,22 @@
         "print(f\"Today is {datetime.today():%A}.\")"
       ],
       "metadata": {
-        "id": "UyTT6C0JhGBs"
+        "id": "UyTT6C0JhGBs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ef52e19-1657-4991-bf60-82ffe9a2017e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Today is Friday.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -169,7 +181,7 @@
       "metadata": {
         "id": "5Ht3mC6LUcUq"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -191,7 +203,11 @@
     },
     {
       "metadata": {
-        "id": "Pa22xutOAiTx"
+        "id": "Pa22xutOAiTx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00a45442-2316-42f5-f1f5-abadea41a69a"
       },
       "cell_type": "code",
       "source": [
@@ -201,8 +217,16 @@
         "dataset = africa_galore[\"description\"]\n",
         "print(f\"The dataset consists of {dataset.shape[0]} paragraphs.\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The dataset consists of 232 paragraphs.\n"
+          ]
+        }
+      ],
+      "execution_count": 4
     },
     {
       "metadata": {
@@ -215,7 +239,11 @@
     },
     {
       "metadata": {
-        "id": "IRYzvOkxCILc"
+        "id": "IRYzvOkxCILc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a814f9b-72a1-4420-a889-035568b7cb92"
       },
       "cell_type": "code",
       "source": [
@@ -224,8 +252,112 @@
         "    formatted_paragraph = textwrap.fill(paragraph)\n",
         "    print(f\"{formatted_paragraph}\\n\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Lagos air was thick with humidity, but the energy in the club was\n",
+            "electric. The band launched into a hypnotic Afrobeat groove, the drums\n",
+            "pounding out a complex polyrhythm, the horns blaring a soaring melody,\n",
+            "and the bass laying down a deep, funky foundation. A woman named Imani\n",
+            "moved effortlessly to the music, her body swaying in time with the\n",
+            "rhythm. The music seemed to flow through her, a powerful current of\n",
+            "energy and joy. All around her, people were dancing, singing, and\n",
+            "clapping, caught up in the infectious rhythm. The music was more than\n",
+            "just entertainment; it was a celebration of life, a connection to\n",
+            "their shared heritage, a vibrant expression of the soul of Lagos.\n",
+            "\n",
+            "The warm evening air in Accra was filled with the lilting melodies of\n",
+            "Highlife music. At a small bar tucked away on a side street, a band\n",
+            "played, the guitars weaving intricate patterns, the horns adding a\n",
+            "bright, joyful counterpoint. Kwame, a man with a wistful smile, sat at\n",
+            "a table nursing a beer, lost in the music. The Highlife tunes evoked\n",
+            "memories of his childhood, of family gatherings, of dancing under the\n",
+            "stars. The music was a soundtrack to his life, a reminder of his\n",
+            "roots, a source of comfort and joy in the bustling city.\n",
+            "\n",
+            "The bustling streets of Lagos were alive with the sounds of Juju\n",
+            "music. From a small radio in a market stall, the distinctive rhythms\n",
+            "and vocals of King Sunny Adé poured out, drawing a crowd of listeners.\n",
+            "Mama Bisi, a woman with a warm smile and a contagious laugh, tapped\n",
+            "her feet to the beat as she haggled for vegetables. The music was a\n",
+            "constant companion in her life, a source of energy and inspiration, a\n",
+            "reminder of the rich cultural tapestry of Nigeria.\n",
+            "\n",
+            "The Dakar waterfront was buzzing with activity as the sun began to\n",
+            "set. From a nearby restaurant, the vibrant sounds of Mbalax music\n",
+            "spilled out, the distinctive vocals of Youssou N'Dour soaring over the\n",
+            "complex percussion and the hypnotic basslines. A group of friends,\n",
+            "gathered for an evening meal, swayed to the music, their faces lit up\n",
+            "with smiles. The Mbalax rhythms, a blend of traditional Senegalese\n",
+            "music and modern influences, created an atmosphere of celebration and\n",
+            "joy, a vibrant expression of Senegalese culture.\n",
+            "\n",
+            "The Kinshasa night was alive with the infectious energy of Soukous\n",
+            "music. In a crowded nightclub, the band played, the guitars weaving\n",
+            "intricate melodies, the drums driving the rhythm, and the singers'\n",
+            "voices urging everyone to dance. Jean-Pierre, a man with boundless\n",
+            "energy, moved his feet to the beat, lost in the music. The Soukous\n",
+            "rhythms, a fusion of Congolese rumba and other influences, created a\n",
+            "whirlwind of movement and joy, a celebration of life and music in the\n",
+            "heart of Africa.\n",
+            "\n",
+            "In a small township outside Durban, a group of men gathered in a\n",
+            "community hall. They were members of an Isicathamiya choir, practicing\n",
+            "their intricate harmonies and synchronized dance moves. The music,\n",
+            "characterized by its a cappella vocals and close harmonies, filled the\n",
+            "hall with a powerful and moving sound. For these men, Isicathamiya was\n",
+            "more than just music; it was a way to express their emotions, to\n",
+            "connect with their Zulu heritage, and to find solace and strength in\n",
+            "the face of adversity.\n",
+            "\n",
+            "The vibrant colors and intricate patterns of Kente cloth, a symbol of\n",
+            "Ghanaian royalty and prestige, tell stories of history, culture, and\n",
+            "social status. Woven on narrow looms by skilled artisans, each strip\n",
+            "of Kente is a testament to patience and artistry. The geometric\n",
+            "designs, rich with symbolism, represent proverbs, historical events,\n",
+            "and important figures. Worn during special occasions and ceremonies,\n",
+            "Kente cloth embodies the spirit of Ghana, its vibrant culture, and its\n",
+            "rich history. From the bright yellows and golds representing royalty\n",
+            "to the deep blues and greens symbolizing spirituality, Kente is a\n",
+            "visual language, a wearable expression of Ghanaian identity and\n",
+            "heritage.\n",
+            "\n",
+            "Bogolanfini, or mud cloth, from Mali, is a textile steeped in\n",
+            "tradition and symbolism. Its distinctive patterns, created using\n",
+            "fermented mud and natural dyes, tell stories of Malian culture,\n",
+            "history, and beliefs. The process of creating Bogolanfini is as rich\n",
+            "and complex as the designs themselves, involving multiple stages of\n",
+            "dyeing, painting, and sun-drying. Each piece is unique, reflecting the\n",
+            "artistry and skill of the maker. Traditionally worn by hunters and\n",
+            "warriors, Bogolanfini has become a symbol of Malian identity and a\n",
+            "testament to the enduring power of indigenous art forms.\n",
+            "\n",
+            "Adire, a resist-dyed indigo cloth from Nigeria, is a vibrant\n",
+            "expression of Yoruba culture and creativity. The intricate patterns,\n",
+            "created using various techniques such as stitching, tying, and\n",
+            "applying starch paste, represent proverbs, stories, and symbols of\n",
+            "Yoruba cosmology. Adire, meaning “tied and dyed,” is a testament to\n",
+            "the ingenuity and artistry of Yoruba women, who have passed down these\n",
+            "techniques through generations. From the bold, geometric designs of\n",
+            "Adire Eleko to the more fluid patterns of Adire Oniko, Adire cloth is\n",
+            "a celebration of Yoruba artistry and a symbol of cultural pride.\n",
+            "\n",
+            "Kanga, a colorful printed cloth from East Africa, particularly\n",
+            "Tanzania and Kenya, is more than just a fabric; it's a form of\n",
+            "communication and social expression. Each Kanga features a central\n",
+            "design surrounded by a border and a proverb or saying, often written\n",
+            "in Swahili. These proverbs offer advice, commentary on social issues,\n",
+            "or expressions of love and friendship. Kanga are worn by women for\n",
+            "everyday wear, special occasions, and as gifts, serving as a vibrant\n",
+            "symbol of East African culture and a testament to the power of\n",
+            "language and visual expression.\n",
+            "\n"
+          ]
+        }
+      ],
+      "execution_count": 5
     },
     {
       "metadata": {
@@ -244,7 +376,11 @@
     },
     {
       "metadata": {
-        "id": "mns1I5yzx-kp"
+        "id": "mns1I5yzx-kp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a46ca97-9715-4889-8569-1cbb0f216c7e"
       },
       "cell_type": "code",
       "source": [
@@ -265,8 +401,29 @@
         "# Tokenize an example text with the `space_tokenize` function.\n",
         "space_tokenize(\"Kanga, a colorful printed cloth is more than just a fabric.\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Kanga,',\n",
+              " 'a',\n",
+              " 'colorful',\n",
+              " 'printed',\n",
+              " 'cloth',\n",
+              " 'is',\n",
+              " 'more',\n",
+              " 'than',\n",
+              " 'just',\n",
+              " 'a',\n",
+              " 'fabric.']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
+      "execution_count": 6
     },
     {
       "metadata": {
@@ -290,14 +447,146 @@
     },
     {
       "metadata": {
-        "id": "Xno1DO0sY87o"
+        "id": "Xno1DO0sY87o",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5745cba-cf98-46ac-90f5-eb49c6928b13"
       },
       "cell_type": "code",
       "source": [
         "space_tokenize(dataset[0])"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['The',\n",
+              " 'Lagos',\n",
+              " 'air',\n",
+              " 'was',\n",
+              " 'thick',\n",
+              " 'with',\n",
+              " 'humidity,',\n",
+              " 'but',\n",
+              " 'the',\n",
+              " 'energy',\n",
+              " 'in',\n",
+              " 'the',\n",
+              " 'club',\n",
+              " 'was',\n",
+              " 'electric.',\n",
+              " 'The',\n",
+              " 'band',\n",
+              " 'launched',\n",
+              " 'into',\n",
+              " 'a',\n",
+              " 'hypnotic',\n",
+              " 'Afrobeat',\n",
+              " 'groove,',\n",
+              " 'the',\n",
+              " 'drums',\n",
+              " 'pounding',\n",
+              " 'out',\n",
+              " 'a',\n",
+              " 'complex',\n",
+              " 'polyrhythm,',\n",
+              " 'the',\n",
+              " 'horns',\n",
+              " 'blaring',\n",
+              " 'a',\n",
+              " 'soaring',\n",
+              " 'melody,',\n",
+              " 'and',\n",
+              " 'the',\n",
+              " 'bass',\n",
+              " 'laying',\n",
+              " 'down',\n",
+              " 'a',\n",
+              " 'deep,',\n",
+              " 'funky',\n",
+              " 'foundation.',\n",
+              " 'A',\n",
+              " 'woman',\n",
+              " 'named',\n",
+              " 'Imani',\n",
+              " 'moved',\n",
+              " 'effortlessly',\n",
+              " 'to',\n",
+              " 'the',\n",
+              " 'music,',\n",
+              " 'her',\n",
+              " 'body',\n",
+              " 'swaying',\n",
+              " 'in',\n",
+              " 'time',\n",
+              " 'with',\n",
+              " 'the',\n",
+              " 'rhythm.',\n",
+              " 'The',\n",
+              " 'music',\n",
+              " 'seemed',\n",
+              " 'to',\n",
+              " 'flow',\n",
+              " 'through',\n",
+              " 'her,',\n",
+              " 'a',\n",
+              " 'powerful',\n",
+              " 'current',\n",
+              " 'of',\n",
+              " 'energy',\n",
+              " 'and',\n",
+              " 'joy.',\n",
+              " 'All',\n",
+              " 'around',\n",
+              " 'her,',\n",
+              " 'people',\n",
+              " 'were',\n",
+              " 'dancing,',\n",
+              " 'singing,',\n",
+              " 'and',\n",
+              " 'clapping,',\n",
+              " 'caught',\n",
+              " 'up',\n",
+              " 'in',\n",
+              " 'the',\n",
+              " 'infectious',\n",
+              " 'rhythm.',\n",
+              " 'The',\n",
+              " 'music',\n",
+              " 'was',\n",
+              " 'more',\n",
+              " 'than',\n",
+              " 'just',\n",
+              " 'entertainment;',\n",
+              " 'it',\n",
+              " 'was',\n",
+              " 'a',\n",
+              " 'celebration',\n",
+              " 'of',\n",
+              " 'life,',\n",
+              " 'a',\n",
+              " 'connection',\n",
+              " 'to',\n",
+              " 'their',\n",
+              " 'shared',\n",
+              " 'heritage,',\n",
+              " 'a',\n",
+              " 'vibrant',\n",
+              " 'expression',\n",
+              " 'of',\n",
+              " 'the',\n",
+              " 'soul',\n",
+              " 'of',\n",
+              " 'Lagos.']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
+      "execution_count": 7
     },
     {
       "metadata": {
@@ -342,7 +631,11 @@
     },
     {
       "metadata": {
-        "id": "IJx9P17ox-kp"
+        "id": "IJx9P17ox-kp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "507630f9-8960-46ea-c0c8-e1ab56df070f"
       },
       "cell_type": "code",
       "source": [
@@ -362,12 +655,16 @@
         "    \"\"\"\n",
         "\n",
         "    # Tokenize text.\n",
-        "    tokens = ...  # Add your code here.\n",
+        "    tokens = text.split() # Add your code here.\n",
         "\n",
         "    # Construct the list of n-grams.\n",
         "    ngrams = []\n",
         "\n",
         "    # Add your code here.\n",
+        "    for i in range(len(tokens) - n + 1):\n",
+        "      #Slice the list from the current position\n",
+        "      ngram = tuple(tokens[i : i + n])\n",
+        "      ngrams.append(ngram)\n",
         "\n",
         "    return ngrams\n",
         "\n",
@@ -383,8 +680,18 @@
         "print(\"First 10 Bigrams:\", all_bigrams[:10])\n",
         "print(\"First 10 Trigrams:\", all_trigrams[:10])"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "First 10 Unigrams: [('The',), ('Lagos',), ('air',), ('was',), ('thick',), ('with',), ('humidity,',), ('but',), ('the',), ('energy',)]\n",
+            "First 10 Bigrams: [('The', 'Lagos'), ('Lagos', 'air'), ('air', 'was'), ('was', 'thick'), ('thick', 'with'), ('with', 'humidity,'), ('humidity,', 'but'), ('but', 'the'), ('the', 'energy'), ('energy', 'in')]\n",
+            "First 10 Trigrams: [('The', 'Lagos', 'air'), ('Lagos', 'air', 'was'), ('air', 'was', 'thick'), ('was', 'thick', 'with'), ('thick', 'with', 'humidity,'), ('with', 'humidity,', 'but'), ('humidity,', 'but', 'the'), ('but', 'the', 'energy'), ('the', 'energy', 'in'), ('energy', 'in', 'the')]\n"
+          ]
+        }
+      ],
+      "execution_count": 12
     },
     {
       "cell_type": "code",
@@ -394,10 +701,21 @@
       ],
       "metadata": {
         "id": "tlT3xhwcsEtE",
-        "cellView": "form"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f69eee8f-8df7-4b06-e14e-1ea77d11f2f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Nice! Your implementation looks correct.\n"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
